--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -5,18 +5,18 @@
 if (${LLVM_VERSION_MAJOR} LESS_EQUAL 7)
 add_llvm_loadable_module( LLVMEnzyme
     Enzyme.cpp
-    #    DEPENDS
-    #intrinsics_gen
-    #PLUGIN_TOOL
-    #opt
+    DEPENDS
+    intrinsics_gen
+    PLUGIN_TOOL
+    opt
   )
 else()
 add_llvm_library( LLVMEnzyme
     Enzyme.cpp
-    #    DEPENDS
-    #intrinsics_gen
-    #PLUGIN_TOOL
-    #opt
+    DEPENDS
+    intrinsics_gen
+    PLUGIN_TOOL
+    opt
   )
 
 endif()
