--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -1,5 +1,10 @@
 project(Enzyme)
 
+SET(CMAKE_CXX_FLAGS "-Wall")
+SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
+SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")
+
 set(CMAKE_CXX_STANDARD 11)
 cmake_minimum_required(VERSION 3.10)
 
