Force LLVM 8 module

--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -13,6 +13,7 @@ add_llvm_loadable_module( LLVMEnzyme
 else()
 add_llvm_library( LLVMEnzyme
     Enzyme.cpp
+    MODULE
     DEPENDS
     intrinsics_gen
     PLUGIN_TOOL
