--- a/enzyme/test/CMakeLists.txt
+++ b/enzyme/test/CMakeLists.txt
@@ -5,7 +5,7 @@ configure_lit_site_cfg(
   ${CMAKE_CURRENT_SOURCE_DIR}/lit.cfg.py
 )
 
-set(ENZYME_TEST_DEPS LLVMEnzyme)
+set(ENZYME_TEST_DEPS LLVMEnzyme-${LLVM_VERSION_MAJOR})
 
 set(ENZYME_TESTSUITES)
 list(APPEND ${CMAKE_CURRENT_BINARY_DIR}/lit.cfg)
