Better CI for LLVM and Julia (#3)
* Try without ubuntu mods

* Fix python lit install

* Reduce fetch depth for CI

* Try relpath

* Force llvm findpackage

* add no default path

* add cmake path

* Force LLVM path

* actually force llvm path

* install usual way

* add llvm spaces

* add llvm spaces

* add llvm spaces

* add llvm spaces

* add llvm spaces

* Fix tools

* try julia build too

* update build_llvm

* Fix julia issue (LLVM.cmake has hardcoded bad path)

* Ensure filecheck and opt are in julia path

* add llvm config for julia

* Put enzyme test after julia one

* show paths

* fix enzyme.jl tests

* ensure ENZYME_PATH is set

* add workspace var?

* add workspace var?

* add reversediff

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,22 +10,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        llvm: ["6.0", "7", "8", "9"]
-        build: ["Release", "RelWithDebInfo", "Debug"]
+        llvm: ["7", "8"]
+        build: ["Release", "Debug"] # "RelWithDebInfo"
         os: [ubuntu-18.04]
     
     steps:
     - name: add llvm 
-      run: sudo add-apt-repository 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-${{ matrix.llvm }} main'
-    - name: update ubuntu
-      run: sudo apt-get update -y && sudo apt-get remove -y llvm* libllvm* libgl* php* mono* msbuild* libmono*
-    - name: install llvm
-      run: sudo apt-get install -y --no-install-recommends build-essential llvm-${{ matrix.llvm }}-tools llvm-${{ matrix.llvm }}-dev cmake
+      run: sudo apt-get install -y llvm-${{ matrix.llvm }}-dev llvm-${{ matrix.llvm }}-tools
     - uses: actions/checkout@v1
+      with:
+          fetch-depth: 1
     - name: mkdir
       run: cd enzyme && mkdir build
     - name: cmake
-      run: cd enzyme/build && cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }}
+      run: |
+          cd enzyme/build 
+          cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DLLVM_DIR=/usr/lib/llvm-${{ matrix.llvm }}/lib/cmake/llvm
     - name: make
       run: cd enzyme/build && make
     - name: make check-enzyme
