Fix the incredibly stupid plug AssertingVH bug (#4)
* start canonical fixups and call it a night

* Horrible horrible hacks

* Working tests

* working LLVM 6?

* don't forget to prepend fake

* Fix default behavior for unknown constant intrinsic

* cleanup prints

--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -3,7 +3,11 @@ project(Enzyme)
 SET(CMAKE_CXX_FLAGS "-Wall")
 SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
-SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")
+
+SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g -fno-omit-frame-pointer")
+
+#SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g -fno-omit-frame-pointer -fsanitize=address")
+#SET(CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 
 set(CMAKE_CXX_STANDARD 11)
 cmake_minimum_required(VERSION 3.5)
