--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -5,6 +5,7 @@
 if (${LLVM_VERSION_MAJOR} LESS 8)
     add_llvm_loadable_module( LLVMEnzyme-${LLVM_VERSION_MAJOR}
     Enzyme.cpp
+    Utils.cpp
     SCEV/ScalarEvolutionExpander.cpp
     DEPENDS
     intrinsics_gen
@@ -14,6 +15,7 @@ if (${LLVM_VERSION_MAJOR} LESS 8)
 else()
     add_llvm_library( LLVMEnzyme-${LLVM_VERSION_MAJOR}
     Enzyme.cpp
+    Utils.cpp
     SCEV/ScalarEvolutionExpander.cpp
     MODULE
     DEPENDS
