Cleanup files and split for organization

--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -2,26 +2,28 @@
 #  set(LLVM_LINK_COMPONENTS Core Support)
 #endif()
 
+file(GLOB ENZYME_SRC
+    "*.cpp"
+)
+
+list(APPEND ENZYME_SRC SCEV/ScalarEvolutionExpander.cpp)
+
 if (${LLVM_VERSION_MAJOR} LESS 8)
     add_llvm_loadable_module( LLVMEnzyme-${LLVM_VERSION_MAJOR}
-    Enzyme.cpp
-    Utils.cpp
-    SCEV/ScalarEvolutionExpander.cpp
-    DEPENDS
-    intrinsics_gen
-    PLUGIN_TOOL
-    opt
-  )
+        ${ENZYME_SRC}
+        DEPENDS
+        intrinsics_gen
+        PLUGIN_TOOL
+        opt
+    )
 else()
     add_llvm_library( LLVMEnzyme-${LLVM_VERSION_MAJOR}
-    Enzyme.cpp
-    Utils.cpp
-    SCEV/ScalarEvolutionExpander.cpp
-    MODULE
-    DEPENDS
-    intrinsics_gen
-    PLUGIN_TOOL
-    opt
-  )
+        ${ENZYME_SRC}
+        MODULE
+        DEPENDS
+        intrinsics_gen
+        PLUGIN_TOOL
+        opt
+    )
 
 endif()
