--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -48,3 +48,4 @@ message("found llvm version " ${LLVM_VERSION_MAJOR})
 
 add_subdirectory(Enzyme)
 add_subdirectory(test)
+add_subdirectory(functional_tests_c)
