--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,4 +1,4 @@
-name: Enzyme CI
+name: C/C++ CI
 
 on: [push]
 
@@ -10,13 +10,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        llvm: ["7", "8"]
+        llvm: ["7"]
         build: ["Release", "Debug"] # "RelWithDebInfo"
         os: [ubuntu-18.04]
     
     steps:
     - name: add llvm 
-      run: sudo apt-get install -y llvm-${{ matrix.llvm }}-dev llvm-${{ matrix.llvm }}-tools
+      run: sudo apt-get install -y llvm-${{ matrix.llvm }}-dev llvm-${{ matrix.llvm }}-tools clang-${{ matrix.llvm }}
     - uses: actions/checkout@v1
       with:
           fetch-depth: 1
@@ -28,5 +28,5 @@ jobs:
           cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DLLVM_DIR=/usr/lib/llvm-${{ matrix.llvm }}/lib/cmake/llvm
     - name: make
       run: cd enzyme/build && make
-    - name: make check-enzyme
-      run: cd enzyme/build && make check-enzyme
+    - name: make check-enzyme-c
+      run: cd enzyme/build && make check-enzyme-c
