--- a/enzyme/functional_tests_c/test.template
+++ b/enzyme/functional_tests_c/test.template
@@ -2,4 +2,5 @@
 ; RUN: make clean-@NAME@ ENZYME_PLUGIN=%loadEnzyme
 ; RUN: make build/@NAME@ ENZYME_PLUGIN=%loadEnzyme CLANG_BIN_PATH=%clangBinPath
 ; RUN: build/@NAME@
+; RUN: make clean-@NAME@ ENZYME_PLUGIN=%loadEnzyme
 @EXPECTFAIL@
