--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -28,5 +28,5 @@ jobs:
           cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DLLVM_DIR=/usr/lib/llvm-${{ matrix.llvm }}/lib/cmake/llvm
     - name: make
       run: cd enzyme/build && make
-    - name: make check-enzyme-c
-      run: cd enzyme/build && make check-enzyme-c
+    - name: make check-enzyme-integration
+      run: cd enzyme/build && make check-enzyme-integration
