--- a/enzyme/test/lit.site.cfg.py.in
+++ b/enzyme/test/lit.site.cfg.py.in
@@ -37,6 +37,9 @@ except KeyError:
 config.excludes = ['Inputs']
 
 config.substitutions.append(('%shlibext', config.llvm_shlib_ext))
+config.substitutions.append(('%lli', config.llvm_tools_dir + "/lli"))
+config.substitutions.append(('%opt', config.llvm_tools_dir + "/opt"))
+config.substitutions.append(('%clang', config.llvm_tools_dir + "/clang"))
 config.substitutions.append(('%loadEnzyme', ''
                                  + ' -load=@ENZYME_BINARY_DIR@/Enzyme/LLVMEnzyme-' + config.llvm_ver + config.llvm_shlib_ext
                                  ))
