--- a/.github/workflows/enzyme.yml
+++ b/.github/workflows/enzyme.yml
@@ -16,7 +16,7 @@ jobs:
     
     steps:
     - name: add llvm 
-      run: sudo apt-get install -y llvm-${{ matrix.llvm }}-dev llvm-${{ matrix.llvm }}-tools libeigen3-dev
+      run: sudo apt-get install -y llvm-${{ matrix.llvm }}-dev llvm-${{ matrix.llvm }}-tools 
     - uses: actions/checkout@v1
       with:
           fetch-depth: 1
