--- a/enzyme/benchmarks/lit.site.cfg.py.in
+++ b/enzyme/benchmarks/lit.site.cfg.py.in
@@ -43,6 +43,9 @@ config.substitutions.append(('%clang', config.llvm_tools_dir + "/clang"))
 config.substitutions.append(('%loadEnzyme', ''
                                  + ' -load=@ENZYME_BINARY_DIR@/Enzyme/LLVMEnzyme-' + config.llvm_ver + config.llvm_shlib_ext
                                  ))
+config.substitutions.append(('%desired_wd', ''
+                                     + "@ENZYME_SOURCE_DIR@/benchmarks/"
+                                                                      ))
 
 # Let the main config do the real work.
-lit_config.load_config(config, "@ENZYME_SOURCE_DIR@/test/lit.cfg.py")
+lit_config.load_config(config, "@ENZYME_SOURCE_DIR@/benchmarks/lit.cfg.py")
