--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -49,10 +49,11 @@ message("found llvm include directory here " ${LLVM_INCLUDE_DIRS})
 message("found llvm definitions " ${LLVM_DEFINITIONS})
 message("found llvm version " ${LLVM_VERSION_MAJOR})
 
+SET(llvmconfig ${LLVM_TOOLS_BINARY_DIR}/llvm-config)
 
-message("llvm-config is " ${LLVM_TOOLS_BINARY_DIR}/llvm-config)
+message("llvm-config is " ${llvmconfig})
 
-execute_process(COMMAND ${LLVM_TOOLS_BINARY_DIR}/llvm-config --includedir OUTPUT_VARIABLE LLVM_IDIR)
+execute_process(COMMAND ${llvmconfig} --includedir OUTPUT_VARIABLE LLVM_IDIR)
 string(REGEX REPLACE "\n$" "" LLVM_IDIR "${LLVM_IDIR}")
 message("first llvm include directory" ${LLVM_IDIR})
 
