--- a/.github/workflows/julia.yml
+++ b/.github/workflows/julia.yml
@@ -9,53 +9,43 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: [1.2.0]
+        julia-version: [1.3]
         os: [ubuntu-18.04]
     
     steps:
-      - name: "Checkout Enzyme.jl code"
-        uses: actions/checkout@v1
-        with:
-            repository: wsmoses/Enzyme.jl
-            clean: false
-            path: Enzyme.jl
-            token: ${{secrets.enzymejl_secret}}
-            ref: master
       - name: "Checkout Enzyme code"
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
       - name: "Set up Julia"
-        uses: julia-actions/setup-julia@v0.2
+        uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
       - name: "Download LLVM"
         run: |
-          julia --project=contrib -e 'using Pkg; pkg"instantiate"'
-          julia --project=contrib contrib/build_LLVM.v6.0.1.jl
+          julia -e 'using Pkg; pkg"add LLVM_jll"'
+          ARTIFACT_DIR=`julia -e "using LLVM_jll; print(LLVM_jll.artifact_dir)"`
+          echo "ARTIFACT_DIR=${ARTIFACT_DIR}"
+          # workaround https://github.com/JuliaPackaging/Yggdrasil/issues/652
           sudo mkdir -p /workspace
-          sudo ln -s `pwd`/contrib/usr /workspace/destdir
-          sudo ln -s `pwd`/contrib/usr/tools/opt `pwd`/contrib/usr/bin/opt
-          sudo ln -s `pwd`/contrib/usr/tools/FileCheck `pwd`/contrib/usr/bin/FileCheck
-          sudo ln -s `pwd`/contrib/usr/tools/llvm-config `pwd`/contrib/usr/bin/llvm-config
+          sudo ln -s ${ARTIFACT_DIR} /workspace/destdir
+          sudo mkdir -p  /workspace/destdir/bin/
+          sudo ln -s  /workspace/destdir/tools/opt /workspace/destdir/bin/opt
+          sudo ln -s  /workspace/destdir/tools/FileCheck /workspace/destdir/bin/FileCheck
+          sudo ln -s  /workspace/destdir/tools/llvm-config /workspace/destdir/bin/llvm-config
         env:
-            NO_DEPS: true
+          JULIA_PROJECT: "/tmp/proj"
+
       - name: "Build Enzyme"
         run: |
           mkdir build
           cd build
           cmake --version
-          ls /home/runner/work/Enzyme/Enzyme/enzyme/Enzyme/
-          cmake -DLLVM_DIR=../contrib/usr/lib/cmake/llvm -DLLVM_EXTERNAL_LIT=../contrib/usr/tools/lit/lit.py ../enzyme
+          cmake -DLLVM_DIR=/workspace/destdir/lib/cmake/llvm \
+                -DLLVM_EXTERNAL_LIT=/workspace/destdir/tools/lit/lit.py ../enzyme
           make -j
       - name: "Julia tests"
         run: |
-            cd ../Enzyme.jl
-            julia --project=. -e 'using Pkg; pkg"instantiate"; pkg"add ReverseDiff"'
-            julia --project=. test/runtests.jl 
+            ENZYME_PATH=`pwd`/build/Enzyme julia -e 'using Pkg; pkg"test"'
         env:
-            ENZYME_PATH: "../Enzyme/build/Enzyme"
-      - name: "Check Enzyme"
-        run: |
-            #cd build
-            #make check-enzyme
+          JULIA_PROJECT: "enzyme/julia"
